--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "version": "1.26.0",
   "source": "src/index.ts",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "engines": {
     "node": ">=16"
   },
